# AudioAuth

./: .gitignore  LICENSE  README.md  cli.py  infer.py  main.md  pyproject.toml  requirements.txt  run_training.sh  train.py  train_dist.sh
AudioAuth/: __init__.py  checkpoint_utils.py  config.py  dataset.py  dist_utils.py  exceptions.py  logger.py  losses.py  metrics.py  optims.py  processor.py  runner.py  storage_utils.py  utils.py
AudioAuth/attacks/: __init__.py  effect_attacks.py  effect_scheduler.py  localization_attacks.py  main.py  sequence_attacks.py  ste.py
AudioAuth/models/: __init__.py  detector.py  discriminator.py  generator.py  layers.py  locator.py  watermarking.py
AudioAuth/models/functional/: audio_functional.py  audio_modules.py
AudioAuth/models/modules/: conv.py  seanet.py  weight_standardization.py
configs/: train_stage1.yml  train_stage2.yml  train_stage3.yml
scripts/: prepare_dataset.py
